--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,18 @@
 
 {% block head%}
 
-<h1>Template</h1>
 {%endblock%}
 
 {% block body%}
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<input type="submit"/>
+<div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="show">Show</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  
+
 
 {%endblock%}
 
